--- a/templatemodifier/package.json
+++ b/templatemodifier/package.json
@@ -1,7 +1,6 @@
 {
   "name": "templatemodifier",
   "version": "1.0.0",
-  "description": "",
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -10,6 +9,15 @@
   "license": "ISC",
   "devDependencies": {
     "browser-sync": "^2.17.5",
-    "gulp": "^3.9.1"
-  }
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2",
+    "node-bourbon": "^4.2.8",
+    "node-neat": "^1.7.2"
+  },
+  "dependencies": {
+    "browser-sync": "^2.17.5",
+    "gulp": "^3.9.1",
+    "gulp-sass": "^2.3.2"
+  },
+  "description": ""
 }
