--- a/templatemodifier/package.json
+++ b/templatemodifier/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "browser-sync": "^2.17.5",
     "gulp": "^3.9.1",
+    "gulp-cli": "^1.2.2",
     "gulp-sass": "^2.3.2"
   },
   "description": ""
